--- a/package.json
+++ b/package.json
@@ -1,51 +1,32 @@
 {
-  "_args": [
-    [
-      "nativescript-google-places-autocomplete@1.0.3",
-      "C:\\Users\\MOUADH\\PycharmProjects\\safemaps-mobile"
-    ]
-  ],
-  "_from": "nativescript-google-places-autocomplete@1.0.3",
-  "_id": "nativescript-google-places-autocomplete@1.0.3",
-  "_inBundle": false,
-  "_integrity": "sha1-JWTvyn+D3whQtNXb2iy5fX3kROg=",
-  "_location": "/nativescript-google-places-autocomplete",
-  "_phantomChildren": {},
-  "_requested": {
-    "type": "version",
-    "registry": true,
-    "raw": "nativescript-google-places-autocomplete@1.0.3",
-    "name": "nativescript-google-places-autocomplete",
-    "escapedName": "nativescript-google-places-autocomplete",
-    "rawSpec": "1.0.3",
-    "saveSpec": null,
-    "fetchSpec": "1.0.3"
-  },
-  "_requiredBy": [
-    "/"
-  ],
-  "_resolved": "https://registry.npmjs.org/nativescript-google-places-autocomplete/-/nativescript-google-places-autocomplete-1.0.3.tgz",
-  "_spec": "1.0.3",
-  "_where": "C:\\Users\\MOUADH\\PycharmProjects\\safemaps-mobile",
-  "author": {
-    "name": "Labidi Aymen",
-    "email": "labidi@aymen.co"
-  },
-  "bootstrapper": "nativescript-plugin-seed",
-  "bugs": {
-    "url": "https://github.com/labidiaymen/nativescript-google-places-autocomplete/issues"
-  },
-  "dependencies": {},
+  "name": "nativescript-google-places-autocomplete",
+  "version": "1.0.1",
   "description": "A NativeScript plugin that works.",
-  "devDependencies": {
-    "prompt": "^1.0.0",
-    "rimraf": "^2.5.0",
-    "tns-core-modules": "^3.1.0",
-    "tns-platform-declarations": "^3.1.0",
-    "tslint": "^5.0.0",
-    "typescript": "~2.3.0"
+  "main": "google-places-autocomplete",
+  "typings": "index.d.ts",
+  "nativescript": {
+    "platforms": {
+      "android": "3.0.0",
+      "ios": "3.0.0"
+    }
   },
-  "homepage": "https://github.com/labidiaymen/nativescript-google-places-autocomplete",
+  "scripts": {
+    "tsc": "tsc -skipLibCheck",
+    "setup": "npm i && ts-patch install",
+    "build": "npm i && tsc",
+    "postclone": "npm i && node scripts/postclone.js && cd ../demo && npm i && cd ../src && npm run plugin.link",
+    "test.android": "npm i && npm run tsc && npm run tslint && cd ../demo && tns build android && tns test android --justlaunch",
+    "test.ios": "npm i && npm run tsc && npm run tslint && cd ../demo && tns build ios && tns test ios --justlaunch",
+    "tslint": "cd .. && tslint \"**/*.ts\" --config tslint.json --exclude \"**/node_modules/**\"",
+    "plugin.link": "npm link && cd ../demo && npm link nativescript-google-places-autocomplete && cd ../src",
+    "plugin.tscwatch": "npm run tsc -- -w",
+    "demo.ios": "npm i && npm run tsc && cd ../demo && tns run ios --syncAllFiles",
+    "demo.android": "npm i && npm run tsc && cd ../demo && tns run android --syncAllFiles",
+    "demo.reset": "cd ../demo && rimraf platforms",
+    "plugin.prepare": "npm run tsc && cd ../demo && tns plugin remove nativescript-google-places-autocomplete && tns plugin add ../src",
+    "clean": "cd ../demo && rimraf hooks node_modules platforms && cd ../src && rimraf node_modules && npm run plugin.link",
+    "ci.tslint": "npm i && tslint '**/*.ts' --config '../tslint.json' --exclude '**/node_modules/**'"
+  },
   "keywords": [
     "NativeScript",
     "JavaScript",
@@ -59,31 +40,28 @@
     "predictions",
     "prediction"
   ],
+  "author": {
+    "name": "Labidi Aymen",
+    "email": "labidi@aymen.co"
+  },
+  "bugs": {
+    "url": "https://github.com/labidiaymen/nativescript-google-places-autocomplete/issues"
+  },
   "license": "Apache-2.0",
-  "main": "google-places-autocomplete",
-  "name": "nativescript-google-places-autocomplete",
-  "nativescript": {
-    "platforms": {
-      "android": "3.0.0",
-      "ios": "3.0.0"
-    }
+  "homepage": "https://github.com/labidiaymen/nativescript-google-places-autocomplete",
+  "readmeFilename": "README.md",
+  "devDependencies": {
+    "@nativescript/core": "~7.0.0",
+    "@nativescript/types": "~7.0.0",
+    "@nativescript/webpack": "~3.0.0",
+    "prompt": "^1.0.0",
+    "rimraf": "^2.5.0",
+    "ts-patch": "^1.3.0",
+    "tslint": "^5.0.0",
+    "typescript": "~3.9.0"
   },
-  "scripts": {
-    "build": "npm i && tsc",
-    "ci.tslint": "npm i && tslint '**/*.ts' --config '../tslint.json' --exclude '**/node_modules/**'",
-    "clean": "cd ../demo && rimraf hooks node_modules platforms && cd ../src && rimraf node_modules && npm run plugin.link",
-    "demo.android": "npm i && npm run tsc && cd ../demo && tns run android --syncAllFiles",
-    "demo.ios": "npm i && npm run tsc && cd ../demo && tns run ios --syncAllFiles",
-    "demo.reset": "cd ../demo && rimraf platforms",
-    "plugin.link": "npm link && cd ../demo && npm link nativescript-google-places-autocomplete && cd ../src",
-    "plugin.prepare": "npm run tsc && cd ../demo && tns plugin remove nativescript-google-places-autocomplete && tns plugin add ../src",
-    "plugin.tscwatch": "npm run tsc -- -w",
-    "postclone": "npm i && node scripts/postclone.js && cd ../demo && npm i && cd ../src && npm run plugin.link",
-    "test.android": "npm i && npm run tsc && npm run tslint && cd ../demo && tns build android && tns test android --justlaunch",
-    "test.ios": "npm i && npm run tsc && npm run tslint && cd ../demo && tns build ios && tns test ios --justlaunch",
-    "tsc": "tsc -skipLibCheck",
-    "tslint": "cd .. && tslint \"**/*.ts\" --config tslint.json --exclude \"**/node_modules/**\""
+  "dependencies": {
+    "ts-node": "^9.0.0"
   },
-  "typings": "index.d.ts",
-  "version": "1.0.3"
+  "bootstrapper": "nativescript-plugin-seed"
 }
